--- a/index.html
+++ b/index.html
@@ -235,15 +235,15 @@
 
           <h2 class="h2 section-title">Bestsellers Products</h2>
 
-           <!-- Filtro -->
-    <ul class="filter-list">
-      <li><button class="filter-btn active" data-filter="all">All</button></li>
-      <li><button class="filter-btn" data-filter="nike">Nike</button></li>
-      <li><button class="filter-btn" data-filter="adidas">Adidas</button></li>
-      <li><button class="filter-btn" data-filter="puma">Puma</button></li>
-      <li><button class="filter-btn" data-filter="bata">Bata</button></li>
-      <li><button class="filter-btn" data-filter="apex">Apex</button></li>
-    </ul>
+          <!-- Filtro -->
+          <ul class="filter-list">
+            <li><button class="filter-btn active" data-filter="all">All</button></li>
+            <li><button class="filter-btn" data-filter="nike">Nike</button></li>
+            <li><button class="filter-btn" data-filter="adidas">Adidas</button></li>
+            <li><button class="filter-btn" data-filter="puma">Puma</button></li>
+            <li><button class="filter-btn" data-filter="bata">Bata</button></li>
+            <li><button class="filter-btn" data-filter="apex">Apex</button></li>
+          </ul>
 
           <ul class="product-list">
 
@@ -373,7 +373,7 @@
               </div>
             </li>
 
-            <li class="product-item">
+            <li class="product-item" data-brand="adidas">
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
@@ -437,7 +437,7 @@
               </div>
             </li>
 
-            <li class="product-item">
+            <li class="product-item" data-brand="adidas">
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
@@ -501,7 +501,7 @@
               </div>
             </li>
 
-            <li class="product-item">
+            <li class="product-item" data-brand="puma">
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
@@ -565,7 +565,7 @@
               </div>
             </li>
 
-            <li class="product-item">
+            <li class="product-item" data-brand="puma">
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
@@ -627,7 +627,7 @@
               </div>
             </li>
 
-            <li class="product-item">
+              <li class="product-item" data-brand="adidas">
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
@@ -689,7 +689,7 @@
               </div>
             </li>
 
-            <li class="product-item">
+            <li class="product-item" data-brand="bata">
               <div class="product-card" tabindex="0">
 
                 <figure class="card-banner">
@@ -833,7 +833,7 @@
 
             <ul class="has-scrollbar">
 
-              <li class="product-item">
+              <li class="product-item" data-brand="bata">
                 <div class="product-card" tabindex="0">
 
                   <figure class="card-banner">
@@ -897,7 +897,7 @@
                 </div>
               </li>
 
-              <li class="product-item">
+              <li class="product-item" data-brand="nike">
                 <div class="product-card" tabindex="0">
 
                   <figure class="card-banner">
@@ -959,7 +959,7 @@
                 </div>
               </li>
 
-              <li class="product-item">
+              <li class="product-item" data-brand="nike">
                 <div class="product-card" tabindex="0">
 
                   <figure class="card-banner">
@@ -1023,7 +1023,7 @@
                 </div>
               </li>
 
-              <li class="product-item">
+              <li class="product-item" data-brand="nike">
                 <div class="product-card" tabindex="0">
 
                   <figure class="card-banner">
