--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link">Products</a>
+            <a href="Products.html" class="navbar-link">Products</a>
           </li>
 
           <li class="navbar-item">
