--- a/detalhes.html
+++ b/detalhes.html
@@ -121,9 +121,11 @@
                 <div>
                     <small class="shoe-num">01</small>
                     <div class="pagination">
-                        <span class="pag pag-active"></span>
-                        <span class="pag"></span>
-                        <span class="pag"></span>
+                        <span class="pag pag-active"></span> <!-- Tênis 1 -->
+                        <span class="pag"></span>           <!-- Tênis 2 -->
+                        <span class="pag"></span>           <!-- Tênis 3 -->
+                        <span class="pag"></span>           <!-- Tênis 4 -->
+                        <span class="pag"></span>           <!-- Tênis 5 -->
                     </div>
                     <small class="shoe-total">03</small>
                 </div>
